--- a/public/global.css
+++ b/public/global.css
@@ -91,3 +91,38 @@ li.selected {
   border-width: 7px;
   border-color: #ff0000;
 }
+.tooltip {
+ position: relative;
+}
+.tooltip .tooltiptext {
+  visibility: hidden;
+  opacity: 0;
+  width: 600px;
+  background-color:  #f2f2f2;
+  color: black;
+  text-align: left;
+  padding: 5px 0;
+  border-radius: 6px;
+  border-style: none none none solid;
+  border-width: 7px;
+  border-color: #00ff00;
+
+  position: absolute;
+  z-index: 1;
+  top: 100%;
+  left: 50%;
+}
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -290px;
+  border-width: 50;
+  border-style: solid;
+  border-color: transparent transparent #f2f2f2 transparent;
+}
